# GnuProp

./: .gitignore  CMakeLists.txt
apps/: beniamino.cpp  compute_tables.cpp  generationEnergy.cpp  nuflux.cpp  nuxsecs.cpp  printNuxsecs.cpp  printProtonlosses.cpp  run.cpp  test_ic.cpp  test_params.cpp  test_photopair.cpp  test_photopion.cpp  tests.cpp  uhecr.cpp
cmake/: FindSIMPROP.cmake
data/: SimProp_proton_losses.txt  xsecs_KA2018_electron.txt  xsecs_KA2018_gamma.txt  xsecs_KA2018_positron.txt
examples/: computeOpticalDepth.cpp  dumpAbsorptionRates.cpp  dumpGammaAbsorption.cpp  dumpInteractions.cpp  dumpInverseComptonRates.cpp  dumpKelnerAharonianPhi.cpp  dumpPairAbsorption.cpp  dumpPhotoPairRates.cpp  dumpPhotoPionRates.cpp  dumpProductionRates.cpp  dumpProtonLosses.cpp
include/: KelnerAharonian2008.h  ark45.h  beniamino.h  cosmology.h  cosmoneutrinos.h  gammaprop.h  gnuprop.h  interpolate.h  losses.h  numeric.h  rates.h  rk.h  rksolver.h  tables.h  tridiag.h  uhecr.h  units.h  utils.h
include/cached/: AbstractCached.h  GammaAbsorptionCached.h  InverseComptonCached.h  PairAbsorptionCached.h  PhotoPairCached.h  PhotoPionCached.h  ProtonLossesCached.h  cached.h  load.h
include/interactions/: BreitWheeler.h  GammaPairProduction.h  InverseCompton.h  KelnerAharonian2008.h  PhotoPair.h  PhotoPion.h
output/: Beniamino_characteristics_vs_energy.txt  Beniamino_characteristics_vs_redshift.txt  Beniamino_jacobian_vs_energy.txt  Beniamino_jacobian_vs_redshift.txt  Beniamino_neutrino_xsecs.txt  Beniamino_neutrino_xsecs_map.txt  Beniamino_nuemissivity_noCutoff_2.6_0_3.txt  Beniamino_spectrum_2.6_-3.txt  Beniamino_spectrum_2.6_0.txt  Beniamino_spectrum_2.6_3.txt  Beniamino_spectrum_noCutoff_2.6_0_3.txt
src/: KelnerAharonian2008.cpp  beniamino.cpp  cosmoneutrinos.cpp  evolve.cpp  evolve_ark_temp.cpp  evolve_cn.cpp  evolve_old.cpp  gammaprop.cpp  gnuprop.cpp  losses.cpp  main.cpp  numeric.cpp  rates.cpp  rksolver.cpp  test.cpp  tridiag.cpp  uhecr.cpp
src/cached/: cached.cpp  load.cpp
src/interactions/: BreitWheeler.cpp  GammaPairProduction.cpp  InverseCompton.cpp  KelnerAharonian2008.cpp  PhotoPair.cpp  PhotoPion.cpp
